Function to open dropdown menus

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
       <main>
         <section class="advanced-search">
           <div class="advanced-search__dropdown-menus-section">
-            <div class="dropdown-menus__bloc">
+            <div class="dropdown-menus__bloc dropdown-menus__bloc1">
               <div class="dropdown-menus__bloc__header">
                 <p>Ingredients</p>
-                <button>
+                <button class="dropdown-button dropdown-button1">
                   <img
                     src="./assets/icons/dropdown-menu-open.svg"
                     alt="Ouvrir ou fermer la liste déroulante"
+                    class="dropwdown-icon"
                   />
-                  <!-- <img
-                    src="./assets/icons/dropdown-menu-close.svg"
-                    alt="Fermer la liste déroulante"
-                  /> -->
                 </button>
               </div>
-              <div class="dropdown-menus__bloc__menu" aria-labelledby="">
+              <div
+                class="dropdown-menus__bloc__details dropdown-menus__bloc__details1"
+                aria-labelledby=""
+              >
                 <div class="search-box">
                   <input
                     type="text"
@@ -92,17 +92,20 @@
                 </ul>
               </div>
             </div>
-            <div class="dropdown-menus__bloc">
+            <div class="dropdown-menus__bloc dropdown-menus__bloc2">
               <div class="dropdown-menus__bloc__header">
                 <p>Appareils</p>
-                <button>
+                <button class="dropdown-button dropdown-button2">
                   <img
                     src="./assets/icons/dropdown-menu-open.svg"
                     alt="Ouvrir ou fermer la liste déroulante"
                   />
                 </button>
               </div>
-              <div class="dropdown-menus__bloc__menu" aria-labelledby="">
+              <div
+                class="dropdown-menus__bloc__details dropdown-menus__bloc__details2"
+                aria-labelledby=""
+              >
                 <div class="search-box">
                   <input
                     type="text"
@@ -129,17 +132,20 @@
                 </ul>
               </div>
             </div>
-            <div class="dropdown-menus__bloc">
+            <div class="dropdown-menus__bloc dropdown-menus__bloc3">
               <div class="dropdown-menus__bloc__header">
                 <p>Ustensiles</p>
-                <button>
+                <button class="dropdown-button dropdown-button3">
                   <img
                     src="./assets/icons/dropdown-menu-open.svg"
                     alt="Ouvrir ou fermer la liste déroulante"
                   />
                 </button>
               </div>
-              <div class="dropdown-menus__bloc__menu" aria-labelledby="">
+              <div
+                class="dropdown-menus__bloc__details dropdown-menus__bloc__details3"
+                aria-labelledby=""
+              >
                 <div class="search-box">
                   <input
                     type="text"
