Dropdown menus & research fields (ing/ust/app)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="search-box">
                   <input
                     type="text"
-                    class="search-box__input"
+                    class="search-box__input search-box__input1"
                     id="searchInput"
                     placeholder="..."
                   />
@@ -73,23 +73,12 @@
                   </button>
                   <div class="search-box__launch-search">
                     <img
-                      class="main-search__btn--fixed"
                       src="./assets/icons/advanced-search-magnigying-glass.svg"
                       alt="Submit research"
                     />
                   </div>
                 </div>
-                <ul class="list-items">
-                  <li>Item 1</li>
-                  <li>Item 2</li>
-                  <li>Item 3</li>
-                  <li>Item 1</li>
-                  <li>Item 2</li>
-                  <li>Item 3</li>
-                  <li>Item 1</li>
-                  <li>Item 2</li>
-                  <li>Item 3</li>
-                </ul>
+                <ul class="list-items"></ul>
               </div>
             </div>
             <div class="dropdown-menus__bloc dropdown-menus__bloc2">
@@ -109,7 +98,7 @@
                 <div class="search-box">
                   <input
                     type="text"
-                    class="search-box__input"
+                    class="search-box__input search-box__input2"
                     id="searchInput"
                     placeholder="..."
                   />
@@ -121,15 +110,12 @@
                   </button>
                   <div class="search-box__launch-search">
                     <img
-                      class="main-search__btn--fixed"
                       src="./assets/icons/advanced-search-magnigying-glass.svg"
                       alt="Submit research"
                     />
                   </div>
                 </div>
-                <ul class="list-items">
-                  <li>Item 1</li>
-                </ul>
+                <ul class="list-items"></ul>
               </div>
             </div>
             <div class="dropdown-menus__bloc dropdown-menus__bloc3">
@@ -149,7 +135,7 @@
                 <div class="search-box">
                   <input
                     type="text"
-                    class="search-box__input"
+                    class="search-box__input search-box__input3"
                     id="searchInput"
                     placeholder="..."
                   />
@@ -161,7 +147,6 @@
                   </button>
                   <div class="search-box__launch-search">
                     <img
-                      class="main-search__btn--fixed"
                       src="./assets/icons/advanced-search-magnigying-glass.svg"
                       alt="Submit research"
                     />
@@ -172,17 +157,8 @@
                 </ul>
               </div>
             </div>
-            <!-- <select
-              class="advanced-search__dropdown-menus--ingredients"
-              id="ingredients"
-              name="ingredients"
-            >
-              <option value="" disabled selected>Ingrédients</option>
-            </select> -->
           </div>
-          <p class="advanced-search__total-recipes">
-            <!-- A remplir avec le JS -->
-          </p>
+          <p class="advanced-search__total-recipes"></p>
         </section>
         <p class="tags-container"></p>
 
